Fixing layout issues caused by style on lastUpdated element

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -30,6 +30,7 @@ a.button:visited{
 div.lastUpdated{
     position: relative;
     left: 65%;
+    width: 35%;
 }
 
 @mixin respond-to($media) {
